fix: navbar collapsable width on desktop

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -275,6 +275,7 @@
     display: block !important; // overrides jquery inline style 
     background: none;
     transition: none;
+    width: 100%;
   }
 
   .menu-wrapper {
